gobmkida/g3/do_attack
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_attack/src/engine/reading.c:3118:44: error: use of undeclared identifier 'xmmword_4AEC40'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4AEC40); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_attack/src/obj/1/reading.o] Error 1
